<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">


    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".SignUpScreenActivity">

        <ImageView
            android:id="@+id/imageView"
            android:layout_width="wrap_content"
            android:layout_height="650dp"
            android:layout_alignParentStart="true"
            android:layout_marginStart="-30dp"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="24dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.530"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/backButton"
            app:layout_constraintVertical_bias="0.541"
            app:srcCompat="@drawable/ic_pink_union"
            tools:ignore="MissingConstraints"
            android:contentDescription="@string/backgroundImage" />

        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="48dp"
            android:layout_height="48dp"
            android:layout_marginTop="16dp"
            android:background="@drawable/circular_button"
            android:contentDescription="@string/backButtonSignUp"
            android:src="@drawable/ic_left_arrow"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.044"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            tools:ignore="MissingConstraints" />

        <TextView
            android:id="@+id/textView"
            android:layout_width="240dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="80dp"
            android:text="@string/create_naccount"
            android:textColor="@color/black"
            android:textSize="32sp"
            android:textStyle="bold"
            android:fontFamily="@font/inter_bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.094"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/emailAddress"
            style="@style/CustomTextFieldStyle"
            android:layout_marginTop="50dp"
            android:ems="10"
            android:inputType="textEmailAddress"
            android:hint="@string/enter_email_id"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textView"
            android:autofillHints="" />

        <EditText
            android:id="@+id/createUserName"
            style="@style/CustomTextFieldStyle"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/create_username"
            android:inputType="textEmailAddress"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.495"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/emailAddress"
            android:autofillHints="" />

        <EditText
            android:id="@+id/createPassword"
            style="@style/CustomTextFieldStyle"
            android:layout_marginTop="32dp"
            android:ems="10"
            android:hint="@string/create_password"
            android:inputType="textEmailAddress"
            app:errorEnabled="true"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.504"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/createUserName"
            tools:ignore="TextFields"
            android:autofillHints="" />

        <Button
            android:id="@+id/signUpButton"
            style="@style/CustomButtonStyle"
            android:layout_width="230dp"
            android:layout_height="wrap_content"
            android:layout_marginBottom="65dp"
            android:text="@string/sign_up"
            android:textAllCaps="false"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>